  printing of the Pi matrix when exogenous regressors are present
- Fix a small memory leak when opening an *.asc data file
- Matrix "division": give the operators "\" and "/" the same semantics
  as in Octave/Matlab (left and right division)
- Remove the FGLS "arch" command from the GUI and add a deprecating
  note to its help text

2011-02-24 version 1.9.4
- Change the default random number generator from GLib's 
  implementation of the Mersenne Twister to the SIMD-oriented Fast 
  Mersenne Twister
- Introduce "addons": approved function packages that are represented
  in the GUI menus
- Add an --accessors option to the "varlist" command, to expose the 
  list of currently available accessor ("dollar") variables
- Add more panel data graphing options -- time-series of group means 
  and boxplots by group -- and redesign the GUI for panel plots
- GUI code: modify to allow building against gtk3, with a configure
  option --enable-gtk3
- GUI icon view: provide a graphical representation for saved 
  "bundles"
- GUI dialog for calling user-defined functions: several improvements
- GUI access to X-12-ARIMA: give option of writing and editing x12a 
  .spc file
- GUI test-statistic calculator: fix a bug in the one-variance test
- New accessor, $vma: retrieves the vector moving average form of a 
  VAR or VECM
- New function, inlist(): gives the position of a series within a 
  named list or zero if the series is not present
- New function, isconst(): determines whether a series or vector has 
  a constant value, and optionally tests for either time-invariance 
  or cross-sectional invariance for panel-data series
- New function, strsub(): substitutes a specified replacement for a 
  specified sub-string in its first (string) argument
- New function, ngetenv(): gets the numerical value of variable in
  the environment
- "estimate" command: document the --quiet flag; and also enable the 
  --quiet option for "system"