@@ -10,6 +10,8 @@ version 1.9.5, in progress
   as in Octave/Matlab (left and right division)
 - Remove the FGLS "arch" command from the GUI and add a deprecating
   note to its help text
+- Lag specification for regressors (e.g. "foo(-1 to -2)"): the name of
+  a list can now be substituted for the name of a series
 
 2011-02-24 version 1.9.4
 - Change the default random number generator from GLib's 
